add ktx dependencies with proper version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
+gradleVersion=4.0.1
+ktxVersion=1.9.11-b1
